# mdk-mola

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  build-automake.sh  build-cmake.sh  build.sh  configure.ac  debug.gdb  debug.x  run.sh  zzmediaxapp.c  zzmediaxapp.h  zzmediaxapp_register.c  zzmediaxapp_register.h
input-stream/: .gitignore  foreman_352x288_20.i420  foreman_352x288_20.nv12  foreman_352x288_20.uyvy  foreman_352x288_20.yuy2
lib/: frame_cmn.c  frame_cmn.h  frame_cmn_read.c  frame_cmn_write.c  frame_reader.c  frame_reader.h  frame_writer.c  frame_writer.h  va_ctx_mng.c  va_ctx_mng.h  va_render_parser.c  va_render_parser.h  va_render_utils.c  va_render_utils.h  va_surf_mng.c  va_surf_mng.h  va_utils.c  va_utils.h
lib/ffmpeg/: ff_buffer.c  ff_buffer.h  ff_cmn.c  ff_cmn.h  ff_codec.c  ff_codec.h  ff_context.c  ff_context.h  ff_format.c  ff_format.h  ff_frame.c  ff_frame.h  ff_packet.c  ff_packet.h  ff_stream.c  ff_stream.h
lib/vaapi/: frame_cmn.h  frame_cmn_read.c  frame_reader.c  frame_reader.h  frame_writer.c  frame_writer.h  va_ctx_mng.c  va_render_utils.c  va_surf_mng.c  va_surf_mng.h  va_utils.c  va_utils.h
matrix/: matrix_1001.c  matrix_1001.h  matrix_1002.c  matrix_1002.h  matrix_1003.c  matrix_1003.h  matrix_1101.c  matrix_1101.h  matrix_2001.c  matrix_2001.h  matrix_2002.c  matrix_2002.h  matrix_2003.c  matrix_2003.h  matrix_3001.c  matrix_3001.h  matrix_4001.c  matrix_4001.h  matrix_9001.c  matrix_9001.h  matrix_9002.c  matrix_9002.h  matrix_9003.c  matrix_9003.h
task/: task_1001.c  task_1001.h  task_1101.c  task_1101.h  task_2001.c  task_2001.h  task_2002.c  task_2002.h  task_2003.c  task_2003.h
utils/: buffer.c  buffer.h  codec.c  codec.h  context.c  context.h  format.c  format.h  frame.c  frame.h  packet.c  packet.h  stream.c  stream.h
zzmediax/: config.h  main.c
zzmediax/framework/: app_base.c  app_base.h  dispatch.c  dispatch.h  event.c  event.h  help.c  help.h  matrix_base.c  matrix_base.h  matrix_grp.c  matrix_grp.h  task_base.c  task_base.h  task_db.c  task_db.h  task_mng.c  task_mng.h
zzmediax/include/: app_defs.h  cmn.h  defs.h  file_defs.h  list.h  matrix_defs.h  string_defs.h  task_defs.h
zzmediax/utils/: split_str.c  split_str.h  utils.c  utils.h
